# zipf-diffusion

./: .gitignore  :w  README.md  pyproject.toml  train.py
.avante_chat_history/: src__zipf_diffusion__log.py.json  src__zipf_diffusion__train.py.json
src/zipf_diffusion/: __init__.py  dit.py  log.py  train.py  trainer.py
